# technical_test

./: .env.example  .gitignore  Dockerfile  Makefile  PROGRESS.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: config.py  database.py  dependencies.py  main.py
app/exceptions/: base.py  handlers.py
app/repositories/: code_repository.py  user_repository.py
app/routers/: users.py
app/schemas/: user.py
app/services/: email_service.py  user_service.py
migrations/: 001_initial.sql
tests/: conftest.py  test_activate.py  test_register.py
