[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "user-registration-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncpg>=0.29",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "bcrypt>=4.1",
    "aiosmtplib>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
